components/rendering/tests/snapshots/markdown__can_handle_heading_ids-2.snap
---
source: components/rendering/tests/markdown.rs
assertion_line: 89
expression: body

---
<h1 id="Hello">Hello</h1>
<h1 id="Hello-1">Hello</h1>
<h1 id="L'écologie_et_vous">L'écologie et vous</h1>
<h1 id="hello">Hello</h1>
<h1 id="hello">Hello</h1>
<h1 id="Something_else">Hello</h1>
<h1 id="Workaround_for_literal_{#…}">Workaround for literal {#…}</h1>
<h1 id="Auto_{#matic}">Auto {#<em>matic</em>}</h1>
<h1 id=""></h1>
<h1 id="-1"></h1>
<h1 id="About"><a href="https://getzola.org/about/">About</a></h1>
<h1 id="Rust"><a href="https://rust-lang.org" title="Rust homepage">Rust</a></h1>
<h1 id="hi"><code>hi</code></h1>
<h1 id="hi-1"><em>hi</em></h1>
<h1 id="hi-2"><strong>hi</strong></h1>
<h1 id="text__there">text <sup class="footnote-reference"><a href="#1">1</a></sup> there</h1>
<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
<p>footnote</p>
</div>

