components/rendering/tests/snapshots/markdown__can_use_external_links_options-2.snap
---
source: components/rendering/tests/markdown.rs
assertion_line: 149
expression: body

---
<p><a rel="noopener" target="_blank" href="https://google.com">https://google.com</a></p>

