components/rendering/tests/snapshots/markdown__can_use_external_links_options.snap
---
source: components/rendering/tests/markdown.rs
assertion_line: 144
expression: body

---
<p><a href="https://google.com">https://google.com</a></p>

